--- a/src/components/compose/Compose.module.css
+++ b/src/components/compose/Compose.module.css
@@ -63,7 +63,7 @@
   .button button {
     padding: 8px 30px 8px 30px;
     font-size: 18px;
-    background-color: seagreen;
+    background-color: rgb(231, 152, 83);
     border-radius: 5px;
     border: none;
     color: white;
